--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@oclif/plugin-update": "^1.3.8",
     "@sentry/integrations": "^5.29.2",
     "@sentry/node": "^5.29.2",
+    "@types/chrome-remote-interface": "^0.31.10",
     "@types/cors": "^2.8.7",
     "@types/dns2": "^2.0.0",
     "@types/dockerode": "^3.3.0",
