--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
   ],
   "scripts": {
     "start": "node-dev ./bin/run start",
-    "build:src": "rm -rf lib && tsc -b --force",
-    "build:release": "oclif-dev manifest && webpack && ts-node ./pack.ts",
+    "build:src": "npm-run-all build:src:clean build:src:ts",
+    "build:src:clean": "rimraf lib/",
+    "build:src:ts": "tsc --build --force",
+    "build:manifest": "oclif-dev manifest",
+    "build:bundle": "webpack",
+    "build:pack": "ts-node ./pack.ts",
+    "build:release": "npm-run-all build:manifest build:bundle build:pack",
     "prepare": "ts-node ./prepare.ts",
-    "prepack": "npm run build:src && oclif-dev manifest",
-    "test": "cross-env TS_NODE_FILES=true mocha --exit -r ts-node/register 'test/**/*.spec.ts'",
-    "test:release": "cross-env TEST_BUILT_TARBALL=1 npm run test"
+    "prepack": "npm-run-all build:src oclif-dev manifest",
+    "test": "npm-run-all test:unit test:integration",
+    "test:unit": "cross-env TS_NODE_FILES=true mocha --exit -r ts-node/register 'test/unit/*.spec.ts'",
+    "test:integration": "cross-env TS_NODE_FILES=true mocha --exit -r ts-node/register 'test/integration/**/*.spec.ts'",
+    "test:integration:release": "cross-env TEST_BUILT_TARBALL=1 npm run test:integration"
   },
   "repository": "httptoolkit/httptoolkit-server",
   "homepage": "https://github.com/httptoolkit/httptoolkit-server",
@@ -117,6 +124,7 @@
     "needle": "^2.4.0",
     "node-dev": "^6.4.0",
     "node-noop": "^1.0.0",
+    "npm-run-all": "^4.1.5",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "reqwest": "^2.0.5",
