Migrate from express-graphql to graphql-http
Same change as was just made in Mockttp.

Appears to be a much smaller package with exactly the same
functionality, officially supported by graphql org, and actively
maintained while the old one is now deprecated. No brainer.

--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
     "env-paths": "^1.0.0",
     "event-stream": "^4.0.1",
     "express": "^4.17.3",
-    "express-graphql": "^0.11.0",
     "graphql": "^15.8.0",
+    "graphql-http": "^1.22.0",
     "graphql-tag": "^2.12.6",
     "gunzip-maybe": "^1.4.2",
     "iconv-lite": "^0.4.24",
