--- a/package.json
+++ b/package.json
@@ -77,7 +77,6 @@
     "mobx": "^6.3.5",
     "mockrtc": "^0.3.1",
     "mockttp": "^3.9.3",
-    "node-abort-controller": "^3.0.1",
     "node-fetch": "^2.6.1",
     "node-forge": "^1.3.0",
     "node-gsettings-wrapper": "^0.5.0",
@@ -105,7 +104,7 @@
     "@types/klaw": "^3.0.2",
     "@types/lodash": "^4.14.117",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^16.18.38",
+    "@types/node": "~20.8.0",
     "@types/node-forge": "^0.9.9",
     "@types/request-promise-native": "^1.0.15",
     "@types/rimraf": "^2.0.2",
