--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,8 @@ jobs:
         run: |
           # Fix annoying Yarn issue: https://github.com/yarnpkg/yarn/issues/7866
           curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+          # Ditto but for Google:
+          curl -sL https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
 
           sudo apt-get update
           sudo apt-get install -y p7zip-full xterm
