Rough but technically working E2E demo of Android Frida interception
Lots more to do here in all sorts of ways, but the concept has all come
together nicely!

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "env-paths": "^1.0.0",
     "event-stream": "^4.0.1",
     "express": "^4.19.2",
+    "frida-js": "^0.3.0",
     "graphql": "^15.8.0",
     "graphql-http": "^1.22.0",
     "graphql-tag": "^2.12.6",
