Add iOS demo support to rough Android+Frida setup
Still quite PoC, but a good outline of how it'll work nicely for both
overall

Note that this also updates the package-lock.json format, which requires
a small build setup change.

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "tar-stream": "^2.2.0",
     "tmp": "0.0.33",
     "tslib": "^1.9.3",
+    "usbmux-client": "^0.1.1",
     "win-version-info": "^5.0.1"
   },
   "devDependencies": {
