--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@graphql-tools/utils": "^8.8.0",
     "@httptoolkit/browser-launcher": "^2.3.0",
     "@httptoolkit/osx-find-executable": "^2.0.1",
+    "@httptoolkit/util": "^0.1.5",
     "@oclif/command": "^1.5.4",
     "@oclif/config": "^1.13.3",
     "@oclif/plugin-help": "^2.2.3",
