Replace ts-node with tsx for npm scripts

--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "build:src:ts": "tsc --build --force",
     "build:manifest": "oclif-dev manifest",
     "build:bundle": "webpack",
-    "build:pack": "ts-node ./pack.ts",
+    "build:pack": "tsx ./pack.ts",
     "build:release": "npm-run-all build:manifest build:bundle build:pack",
-    "prepare": "ts-node ./prepare.ts",
+    "prepare": "tsx ./prepare.ts",
     "prepack": "npm-run-all build:src build:manifest",
     "test": "npm-run-all test:unit test:integration",
-    "test:unit": "cross-env TS_NODE_FILES=true mocha --exit -r ts-node/register 'test/unit/*.spec.ts'",
-    "test:integration": "cross-env TS_NODE_FILES=true mocha --exit -r ts-node/register 'test/integration/**/*.spec.ts'",
+    "test:unit": "mocha --exit 'test/unit/*.spec.ts'",
+    "test:integration": "mocha --exit 'test/integration/**/*.spec.ts'",
     "test:integration:release": "cross-env TEST_BUILT_TARBALL=1 npm run test:integration"
+  },
+  "mocha": {
+    "node-option": ["import=tsx"]
   },
   "repository": "httptoolkit/httptoolkit-server",
   "homepage": "https://github.com/httptoolkit/httptoolkit-server",
@@ -133,7 +136,7 @@
     "stripe": "^8.202.0",
     "superagent": "^7.1.1",
     "ts-loader": "^9.4.2",
-    "ts-node": "^8.4.1",
+    "tsx": "^4.16.2",
     "typescript": "~4.7",
     "umd-compat-loader": "^2.1.2",
     "undici": "^5.28.4",
