--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "stripe": "^8.202.0",
     "superagent": "^7.1.1",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.2",
     "tsx": "^4.16.2",
     "typescript": "~4.7",
     "umd-compat-loader": "^2.1.2",
