--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "mime-types": "^2.1.27",
     "mobx": "^6.3.5",
     "mockrtc": "^0.5.0",
-    "mockttp": "^4.1.0",
+    "mockttp": "file:../mockttp",
     "node-fetch": "^2.6.1",
     "node-forge": "^1.3.0",
     "node-gsettings-wrapper": "^0.5.0",
