--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/tar-stream": "^2.2.1",
     "@types/tmp": "0.0.33",
     "async-mutex": "^0.1.3",
+    "bufferutil": "^4.0.9",
     "chrome-remote-interface": "^0.33.0",
     "cors": "^2.8.5",
     "cors-gate": "^1.1.3",
