Start testing on MacOS 15 intel runner
This is useful as MacOS 13 is being shut down in a month, which will
leave us without any other x64 test env.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,6 +102,9 @@ jobs:
           - platform: MacOS 15 (ARM64)
             os: "macos-15"
             test-script: "./unix.sh darwin arm64"
+          - platform: MacOS 15 (x64)
+            os: "macos-15-intel"
+            test-script: "./unix.sh darwin x64"
           - platform: MacOS 14 (ARM64)
             os: "macos-14"
             test-script: "./unix.sh darwin arm64"
