Good progress towards node-native TS & ESM
This updates TS (disabling lib checking to handle Oclif broken types)
and Node types, and migrates to fully eraseable syntax, and handles most
of the ESM style steps along the way.

Only extra steps for the basics are:
* type: module on the package
* Adding an extra layer on .default (for some reason) on Oclif update &
  adbkit package imports.
* Migrating assorted __dirname to import.meta.url.

Unfortunately though, fully switching to ESM seems very challenging with
Oclif, so we can't quite finish the job here. Maybe we tie that into
cutting out Oclif entirely later?

--- a/package.json
+++ b/package.json
@@ -112,14 +112,14 @@
     "@types/klaw": "^3.0.2",
     "@types/lodash": "^4.14.117",
     "@types/mocha": "^5.2.5",
-    "@types/node": "~20.11.18",
+    "@types/node": "^24.10.0",
     "@types/node-forge": "^0.9.9",
     "@types/request-promise-native": "^1.0.15",
     "@types/rimraf": "^2.0.2",
     "@types/ws": "^6.0.1",
     "axios": "^1.8.2",
     "bent": "^1.5.13",
-    "chai": "^4.2.0",
+    "chai": "^6.2.0",
     "check-msvc-runtime": "^0.1.1",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
@@ -128,7 +128,7 @@
     "got": "^11.8.5",
     "graphql.js": "^0.6.1",
     "klaw": "^4.0.1",
-    "mocha": "^10.8.2",
+    "mocha": "^11.7.5",
     "needle": "^2.4.0",
     "node-noop": "^1.0.0",
     "npm-run-all": "^4.1.5",
@@ -140,8 +140,8 @@
     "superagent": "^7.1.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.3",
-    "typescript": "~4.7",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
     "umd-compat-loader": "^2.1.2",
     "undici": "^5.29.0",
     "unirest": "^0.6.0",
