Switch from webpack to rspack

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:src:clean": "rimraf lib/",
     "build:src:ts": "tsc --build --force",
     "build:manifest": "oclif-dev manifest",
-    "build:bundle": "webpack",
+    "build:bundle": "rspack build",
     "build:pack": "tsx ./pack.ts",
     "build:release": "npm-run-all build:manifest build:bundle build:pack",
     "prepare": "tsx ./prepare.ts",
@@ -101,6 +101,8 @@
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.19.4",
+    "@rspack/cli": "^1.2.2",
+    "@rspack/core": "^1.2.2",
     "@sentry/webpack-plugin": "^4.3.0",
     "@types/aws-lambda": "^8.10.15",
     "@types/bluebird": "^3.5.38",
@@ -121,7 +123,6 @@
     "bent": "^1.5.13",
     "chai": "^4.2.0",
     "check-msvc-runtime": "^0.1.1",
-    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "decompress": "^4.2.1",
     "fs-extra": "^8.1.0",
@@ -138,15 +139,12 @@
     "string-replace-loader": "^3.1.0",
     "stripe": "^8.202.0",
     "superagent": "^7.1.1",
-    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "~4.7",
     "umd-compat-loader": "^2.1.2",
     "undici": "^5.29.0",
     "unirest": "^0.6.0",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.0.1",
     "xhr2": "^0.2.0"
   },
   "overrides": {
